fixed diagonal, realigned win text

--- a/public/main.css
+++ b/public/main.css
@@ -1,7 +1,7 @@
 .board {
     display: flex;
     flex-direction: column;
-    padding-top: 100px;
+    padding-top: 50px;
     align-content: center;
     width: 100%;
 }
